update file leetcode.js to branch test-branch

--- a/ES6.html
+++ b/ES6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>https://raw.githubusercontent.com/freeCodeCamp/ProjectReferenceData/master/GDP-data.json
     <script src="./ES6.js"></script>
 </body>
 </html>
